# HOP_AI_Poland

./: README.md  pyproject.toml
output/: carousel_outline.md
src/hop_ref/: crew.py  main.py
src/hop_ref/config/: agents.yaml  tasks.yaml
src/hop_ref/tools/: hashtag_generator_tool.py  linkedin_research_tool.py
