[project]
name = "hop_ref"
version = "0.1.0"
description = "hop-ref using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "typer[all]>=0.9.0"
]

[project.scripts]
hop_ref = "hop_ref.main:main"
run_crew = "hop_ref.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
